Stop errors and attachments getting too wide (#427)

--- a/src/components/gherkin/ErrorMessage.module.scss
+++ b/src/components/gherkin/ErrorMessage.module.scss
@@ -3,6 +3,7 @@
 .message {
   white-space: pre-wrap;
   font-size: 0.875em;
+  width: fit-content;
   padding: 0.666em 0.75em;
   border-radius: 0.25em;
   margin: 0;
